composer/backend/api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: waste-app
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5008
  type: ClusterIP
